--- a/docs/data-aggregation/connector-ui.mdx
+++ b/docs/data-aggregation/connector-ui.mdx
@@ -10,7 +10,10 @@ import TabItem from '@theme/TabItem';
 
 The connector URL is an URL you can simply host on your website or send by email. No specific integration is required to let your clients to link their card.
 
-An example url looks like this: `https://connector.aggregation.zumrails.com/?customerid=a3510efb-5edb-4972-96be-a5a91ddfa56a`.
+An example url looks like this: 
+
+- PRODUCTION `https://connector.aggregation.zumrails.com/?customerid=<YOUR-CUSOMTER-ID>`.
+- SANDBOX `https://connector-sandbox.aggregation.zumrails.com/?customerid=<YOUR-CUSOMTER-ID>`.
 
 :::info
 We recommend you using the **[Configure](./configure)** page to build your URL.
