--- a/docs/data-aggregation/parameters.mdx
+++ b/docs/data-aggregation/parameters.mdx
@@ -18,7 +18,10 @@ Parameter | Description | Default value | Required
 -------------- | -------------- | ----- | ----
 **customerid** | Your CustomerId | - | yes
 
-The base url for Connector is `https://connector.aggregation.zumrails.com/?customerid=a3510efb-5edb-4972-96be-a5a91ddfa56a`.
+The base url for Connector is: 
+
+- PRODUCTION `https://connector.aggregation.zumrails.com/?customerid=<YOUR-CUSOMTER-ID>`.
+- SANDBOX `https://connector-sandbox.aggregation.zumrails.com/?customerid=<YOUR-CUSOMTER-ID>`.
 
 ### Configure the user experience
 
