--- a/docs/data-aggregation/connector-ui.mdx
+++ b/docs/data-aggregation/connector-ui.mdx
@@ -8,7 +8,7 @@ import TabItem from '@theme/TabItem';
 
 # Connector UI
 
-The connector URL is an URL you can simply host on your website or send by email. No specific integration is required to let your clients to link their card.
+The connector URL is a URL you can simply host on your website or send by email. No specific integration is required to let your clients to link their card.
 
 An example url looks like this: 
 
