--- a/docs/api-specification/transactions.mdx
+++ b/docs/api-specification/transactions.mdx
@@ -241,17 +241,20 @@ CreditCard |
 </Tabs>
 
 :::danger
-In a sandbox environment, real bank operations are not performed. However, there is a way to simulate success, failures and review situations.
+In a sandbox environment, real bank operations are not performed. It provides a way to simulate success, failures and review situations.
 :::
 
 :::caution
-To simulate a failure, use one of the keywords in the field COMMENT while creating a transaction. If no keyword is informed, or something else, the transaction will be considered as a success.
-This service is executed every 10 minutes.
+To simulate a failure, use one of the keywords to simulate failure (shown below) in the field COMMENT while creating a transaction. If no keyword is informed, or something else is informed, the transaction will eventually change status to "Completed".
+This service is executed every minute.
 :::
 
 :::caution
-To simulate a review situation (only available for interac for now), create a transaction with the keyword "UnderReview" in the field COMMENT.
-There is a service which runs every minute that will update the transaction status to Under Review in the first execution. The next time the service runs, it will Complete the transaction.
+Occasionally, Interac flags transactions believed to be possible fraud cases. When Zum Rails is notified, the status of the transaction is changed to "Under Review".To simulate this situation (only available for interac for now), create a transaction with the keyword "UnderReview" in the COMMENT field. Transactions can be flagged "Under Review" for two other scenarios:
+Scenario 1: It could happen that a transaction was flagged as in "Under Review" but before an action was taken it "Completed". Simulate such transactions using the keyword "stopatunderreview" in the COMMENT field. 
+Scenario 2: It could also happen that the transaction was "completed" and then later a fraud alert email was received and hence was flagged as in "Under Review". Simulate such transactions using the keyword "latefraudalert" in the COMMENT field. 
+There is a service which runs every minute that will update the transaction status to Under Review in the first execution. The next time the service runs, it will Complete the transaction. 
+These fraud alerts only apply to certain accounts*
 :::
 
 :::info
@@ -259,7 +262,7 @@ Transaction between users (UserTransfer) is only available for EFT and Visa Dire
 :::
 
 :::info
-When a transaction is created with a scheduled start date, it won't be dispatched right away. This transaction will be prepared to be sent to the financial institution according to its scheduled start date.
+When a transaction is created with a scheduled start date (delay transaction initiation), it won't be dispatched right away. This transaction will be prepared to be sent to the financial institution according to its scheduled start date.
 :::
 
 **Keywords to simulate a transaction failure**
