--- a/docs/api-specification/transactions.mdx
+++ b/docs/api-specification/transactions.mdx
@@ -8,6 +8,8 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import ReactPlayer from 'react-player/youtube'
 
+## Overview
+
 At Zūm Rails, there are 5 ways to create transactions, when using the portal or via API. When creating a transaction via API, the transaction type “ZumRailsType” must be specified.
 
 There are five transaction types (ZumRailsType):
@@ -370,9 +372,10 @@ If your Zūm Rails account is configured to user Interac peer-to-peer, you will 
 :::
 
 :::info
-When using Interac peer-to-peer, the email the TargetUserId will receive from Interac will be coming from UserId and not from your Zūm Rails environment. For example, when you do Accounts Payable from a user John, to another user Mary, the email will say: `John is sending funds to Mary`. This setup provides a lot of flexibility.
+When using Interac peer-to-peer, the email the TargetUserId will receive from Interac will be coming from UserId and not from your Zūm Rails environment. For example, when you do Accounts Payable from a user John, to another user Mary, the email will say: `John is sending funds to Mary`. This setup provides a lot of flexibility. 
 
-Without peer-to-peer, the email would say: `<Your company name> is sending funds to Mary`
+Without peer-to-peer, the email would say: `<Your company name> is sending funds to Mary`.
+:::
 
 ## Get a specific transaction
 
