accountselector parameter note

--- a/docs/data-aggregation/parameters.mdx
+++ b/docs/data-aggregation/parameters.mdx
@@ -32,6 +32,10 @@ accountselector | Display a page to select the preferred account, usually used f
 testinstitution | Display Zūm Rails test institution, used while you are testing | false | false
 adduserinportal | Add connected users in Zūm Rails Portal | true | false
 
+:::note
+ The accountselector parameter will always be set to "True" by default. To set the Parameter "accountselector" to "False", it is mandatory to specify the parameter adduserinportal = false.
+:::
+
 ### Configure the user interface
 
 Parameter | Description | Default value | Required
