updates on aggregation text

--- a/docs/api-specification/aggregation.mdx
+++ b/docs/api-specification/aggregation.mdx
@@ -3,9 +3,9 @@ title: Aggregation
 description:
   How to integrate with aggregation API
 ---
-When aggregation is enabled in your account, Zūm Rails can pull a user’s financial data. This applies for use-cases such as account verification (Know Your Customer - KYC) and risk assessment (90 days of transaction history).
+When aggregation is enabled in your account, Zūm Rails can pull a user’s financial data. This applies for use-cases such as account verification (Know Your Customer - KYC) and risk assessment (Based on past transaction history).
 
-To pull a user’s financial data, this user will have to login using Zūm Connect. If a user was registered with Zūm Rails through a method outside of Zūm Connect, his financial data cannot be extracted.
+To pull a user’s financial data, the user will have to login using Zūm Connect. If a user was registered with Zūm Rails through a method outside of Zūm Connect, his financial data cannot be extracted.
 
 Zūm will then dispatch the connection to the financial data aggregator.
 
