Caution for visa direct change

--- a/docs/api-specification/users.mdx
+++ b/docs/api-specification/users.mdx
@@ -123,8 +123,7 @@ AddressCity             | string    | no    | no        | yes           | no    
 AddressState            | string    | no    | no        | yes           | no           | Billing address state/province
 
 :::caution
-- If the user will be sending funds to Zūm (pull from a card) via Via Direct transaction, ExpireMonth and ExpireYear are required
-- If the user will be receiving funds from Zūm (push to a card), ExpireMonth, ExpireYear, and CVV are optional
+CVV and Expire Month/Year are mandatory for all transaction types with the Visa Direct/Credit Card payment methods.
 :::
 
 **Response**
